JBPM-5976 - Provide auto acknowledge jobs for execution errors - fixed acknowledge methods in services (#895)